  works on the first Reminder in the list. Setting the old property will delete all addtional reminders.The Reminders
  property is of type ArrayList (this is an artifact of being .NET 1.1 compatible, once we move to .NET 2.0 or later, if
  that ever happens, this could/should be typed).

== 1.0.9.9 ==
- added GBase support for m:adjusted_name and gm:adjusted_value inside attributes
  (returned only when adjustments are enabled)
- Google Apps changes:
   - Added new AppsService.createUser methods with hashed password support
   - Updated AppsException with new Google Apps error codes
   - Added the following properties to Login.cs:
       string hashFunctionName - to hash user account password,
       bool agreedToTerms - to see if the user has accepted the Google Apps Terms Of Service,
       bool admin - to see if the user is a domain admin,
       bool changePasswordAtNextLogin - to force the user to change password at next login
   - Updated unittests to test new properties

== 1.0.9.8 ==
- fixed a parsing bug in SpreadsheetService
- fixed a bug in GDataRequestException that would prevent AppsException from accessing the server's response.
- modified AppsException to comply with new GDataRequestException
- fixed a bug in CalculateBaseUri, that caused a crash if the passed in parameters are all NULL. This caused composite feeds
  to not load if there was a comment feed embedded
- fixed a bug in the CalendarEventEntry, it was not parsing extendedProperties. They are now parsed
  and added correctly to the ExtensionElements
- added ACL support. This resulted in changes in the CalendarService.Query method - as a CalendarService
  can now return an EventFeed or an AccessControlFeed is returns now an AtomFeed that you can cast to what
  you are expecting. Added Query overloads to accept EventQuery or AclQuery and return the appropriate 
  Feeds
- added a cmd line tool to query/insert/update to a service based on streams